# Bookmark-API

./: .gitignore  pyproject.toml
bookmark_api/: base_api.py  cli.py
tests/: test_bookmark_api.py
